# Calc

./: CMakeLists.txt  Calc.sln
Calc/: Calc.vcxproj  calc.cpp  tokenise.cpp  tokenise.h
CalcTest/: CalcTest.vcxproj  CalcTest.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h  tokenise.cpp
source/: calc.cpp  tokenise.cpp
test/: CMakeLists.txt
test/include/: stdafx.h
test/source/: tokenise.cpp
